--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family:  sans-serif;
+  font-family: sans-serif;
   margin: 0;
   padding: 0;
   background-color: #1d2b53;
@@ -7,7 +7,7 @@ body {
 }
 
 .wrapper {
-  max-width: 600px;
+  max-width: 380px;
   margin: 50px auto;
   padding: 20px;
   background-color: #7e2553;
@@ -73,6 +73,7 @@ form {
   background-color: #ff004d;
   border-radius: 5px;
   padding: 5px;
+  position: relative;
 }
 
 .select-box img {
@@ -84,6 +85,9 @@ form {
   background: none;
   color: #faef5d;
   font-size: 1.2em;
+  width: auto;
+  background: none;
+  margin: 0 -5px 0 5px;
 }
 
 .icon {
